--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ click==8.1.3
 colorama==0.4.6
 fastapi==0.92.0
 googlesearch-python==1.1.0
+gunicorn==20.1.0
 h11==0.14.0
 idna==2.10
 pydantic==1.10.5
